Working on dependencies upgrade