@@ -19,15 +19,14 @@ import fr.dademo.batch.services.DataSetService;
 import fr.dademo.batch.tools.batch.job.tasklets.DataSetBatchStartupGuardTasklet;
 import fr.dademo.batch.tools.batch.job.tasklets.DataSetResourceQueryTasklet;
 import org.springframework.batch.core.StepExecutionListener;
-import org.springframework.batch.core.configuration.annotation.JobBuilderFactory;
-import org.springframework.batch.core.configuration.annotation.StepBuilderFactory;
 import org.springframework.batch.core.listener.ExecutionContextPromotionListener;
+import org.springframework.batch.core.repository.JobRepository;
 import org.springframework.batch.core.step.tasklet.Tasklet;
 import org.springframework.core.io.ResourceLoader;
+import org.springframework.transaction.PlatformTransactionManager;
 
 import javax.annotation.Nonnull;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static fr.dademo.batch.tools.batch.job.BatchSharedValues.KEY_BATCH_EXECUTION_CONTEXT_DATASET_DEFINITION;
@@ -37,16 +36,17 @@ public abstract class BaseStgJob extends BaseDataSetChunkedJob {
 
     private final DataSetService dataSetService;
 
-    protected BaseStgJob(JobBuilderFactory jobBuilderFactory,
-                         StepBuilderFactory stepBuilderFactory,
-                         BatchConfiguration batchConfiguration,
-                         BatchDataSourcesConfiguration batchDataSourcesConfiguration,
-                         DataSourcesFactory dataSourcesFactory,
-                         ResourceLoader resourceLoader,
-                         DataSetService dataSetService) {
+    protected BaseStgJob(
+        @Nonnull JobRepository jobRepository,
+        @Nonnull PlatformTransactionManager platformTransactionManager,
+        @Nonnull BatchConfiguration batchConfiguration,
+        @Nonnull BatchDataSourcesConfiguration batchDataSourcesConfiguration,
+        @Nonnull DataSourcesFactory dataSourcesFactory,
+        @Nonnull ResourceLoader resourceLoader,
+        @Nonnull DataSetService dataSetService) {
         super(
-            jobBuilderFactory,
-            stepBuilderFactory,
+            jobRepository,
+            platformTransactionManager,
             batchConfiguration,
             batchDataSourcesConfiguration,
             dataSourcesFactory,
@@ -73,7 +73,7 @@ public abstract class BaseStgJob extends BaseDataSetChunkedJob {
         return Stream.concat(
             super.getStepExecutionListeners().stream(),
             Stream.of(executionContextPromotionListener())
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     @Nonnull
