@@ -11,15 +11,14 @@ import fr.dademo.batch.configuration.BatchConfiguration;
 import fr.dademo.batch.configuration.BatchDataSourcesConfiguration;
 import fr.dademo.batch.services.DataSetService;
 import fr.dademo.batch.tools.batch.job.BaseStgJob;
-import org.springframework.batch.core.configuration.annotation.JobBuilderFactory;
-import org.springframework.batch.core.configuration.annotation.StepBuilderFactory;
+import org.springframework.batch.core.repository.JobRepository;
 import org.springframework.batch.core.step.tasklet.Tasklet;
 import org.springframework.batch.item.ItemWriter;
 import org.springframework.core.io.ResourceLoader;
+import org.springframework.transaction.PlatformTransactionManager;
 
 import javax.annotation.Nonnull;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -27,16 +26,17 @@ import java.util.stream.Stream;
  */
 public abstract class AbstractApplicationStgJob extends BaseStgJob {
 
-    protected AbstractApplicationStgJob(JobBuilderFactory jobBuilderFactory,
-                                        StepBuilderFactory stepBuilderFactory,
-                                        BatchConfiguration batchConfiguration,
-                                        BatchDataSourcesConfiguration batchDataSourcesConfiguration,
-                                        DataSourcesFactory dataSourcesFactory,
-                                        ResourceLoader resourceLoader,
-                                        DataSetService dataSetService) {
+    protected AbstractApplicationStgJob(
+        @Nonnull JobRepository jobRepository,
+        @Nonnull PlatformTransactionManager platformTransactionManager,
+        @Nonnull BatchConfiguration batchConfiguration,
+        @Nonnull BatchDataSourcesConfiguration batchDataSourcesConfiguration,
+        @Nonnull DataSourcesFactory dataSourcesFactory,
+        @Nonnull ResourceLoader resourceLoader,
+        @Nonnull DataSetService dataSetService) {
         super(
-            jobBuilderFactory,
-            stepBuilderFactory,
+            jobRepository,
+            platformTransactionManager,
             batchConfiguration,
             batchDataSourcesConfiguration,
             dataSourcesFactory,
@@ -63,7 +63,7 @@ public abstract class AbstractApplicationStgJob extends BaseStgJob {
                     getLiquibaseOutputMigrationTasklet(),
                     getJooqTruncateTasklet()
                 )
-            ).collect(Collectors.toList());
+            ).toList();
         } else {
             return parentInitTasks;
         }
